# ruler

./: .gitignore  Cargo.toml  Makefile  README.md  ci-test.sh  quick-test.sh  test.sh
examples/: cursor_rule.mdc  github_instruction.md  mode-transition-optimization.mdc
fixtures/: README.md
fixtures/cursor/: always-apply.mdc  comma-separated.mdc  empty-metadata.mdc  extension-conversion.mdc  no-frontmatter.mdc  single-string.mdc  standard-array.mdc
fixtures/cursor/nested/deep/: nested-rule.mdc
fixtures/github/: reverse-test.instructions.md  universal.instructions.md
fixtures/malformed/: bad.mdc
src/: main.rs
src/parser/: c2g.rs  common.rs  g2c.rs  mod.rs
